<?xml version="1.0" encoding="utf-8"?><!--
   Copyright 2016 Google Inc.

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->
<resources>
  <string name="app_name">Augmented Images</string>
  <string name="fit_image_to_scan">Fit image to scan</string>
  <string name="channel_red">Red</string>
  <string name="channel_yellow">Yellow</string>
  <string name="channel_blue">Blue</string>
  <string name="render">Render</string>
  <string name="reset">Reset</string>
  <string name="chart">Chart</string>

  <string name="dash">blah</string>

  <string name="radio_row">By row</string>
  <string name="radio_col">By column</string>
  <string name="radio_red">Red channel</string>
  <string name="radio_yellow">Yellow channel</string>
  <string name="radio_blue">Blue channel</string>

  <string name="name_seekbar1">Magnitude</string>
  <string name="name_seekbar2">Density</string>

</resources>
