<!--
   Copyright 2018 Google LLC

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AugmentedImageActivity">

    <fragment
        android:id="@+id/ux_fragment"
        android:name="com.google.ar.sceneform.Visualization_of_Color_Theory.AugmentedImageFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <RelativeLayout
        android:id="@+id/layout_buttons"
        android:layout_width="474dp"
        android:layout_height="160dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="900dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_horizontal|center_vertical"
        android:visibility="invisible">

        <Switch
            android:id="@+id/channelRed"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:onClick="toggleChannel"
            android:textSize="12sp"
            android:text="@string/channel_red"
            android:background="@color/red_50A"/>

        <Switch
            android:id="@+id/channelYellow"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="166dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:onClick="toggleChannel"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:text="@string/channel_yellow"
            android:background="@color/yellow_50A"/>

        <Switch
            android:id="@+id/channelBlue"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="316dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:onClick="toggleChannel"
            android:textSize="12sp"
            android:text="@string/channel_blue"
            android:background="@color/blue_50A"/>

        <ImageView
            android:id="@+id/image_view_fit_to_scan"
            android:layout_width="match_parent"
            android:layout_height="1270dp"
            android:layout_gravity="center"
            android:contentDescription="@string/fit_image_to_scan"
            android:scaleType="fitCenter"
            android:src="@drawable/fit_to_scan" />

        <Button
            android:id="@+id/button_chart"
            android:layout_width="120dp"
            android:layout_height="32dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="348dp"
            android:layout_marginTop="104dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:gravity="end"
            android:onClick="invokeChart"
            android:text="@string/chart"
            android:textSize="12sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_toggle"
        android:layout_width="472dp"
        android:layout_height="112dp"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="6dp"
        android:visibility="invisible">

        <Button
            android:id="@+id/button_rest"
            android:layout_width="60dp"
            android:layout_height="32dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="368dp"
            android:layout_marginTop="72dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:gravity="end"
            android:onClick="reset"
            android:text="@string/reset"
            android:textSize="12sp" />

        <Switch
            android:id="@+id/switch_renderable"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="320dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:checked="true"
            android:gravity="end"
            android:onClick="toggleRenderable"
            android:text="@string/render"
            android:textSize="16sp" />

    </RelativeLayout>


</FrameLayout>
