<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutChart"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChartActivity">

    <TextView
        android:id="@+id/namePainting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:text="TextView"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/painting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/forest"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toEndOf="@+id/namePainting"
        app:layout_constraintTop_toBottomOf="@+id/namePainting" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chart1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/seekBar1"
            android:layout_marginStart="100dp"
            android:layout_marginLeft="48dp"
            android:layout_marginTop="300dp"
            android:layout_marginEnd="100dp"
            android:layout_marginRight="48dp"
            android:layout_marginBottom="162dp" />

        <RadioGroup
            android:id="@+id/radioGroupState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/seekBar1"
            android:layout_margin="8dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="35dp"
            android:layout_toLeftOf="@+id/tvXMax"
            android:max="500"
            android:paddingBottom="12dp">

            <RadioButton
                android:id="@+id/radioRow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/radio_row" />

            <RadioButton
                android:id="@+id/radioCol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_col" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/radioGroupChannel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/seekBar1"
            android:layout_margin="8dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="35dp"
            android:layout_toLeftOf="@+id/radioGroupState"
            android:max="500"
            android:paddingBottom="12dp">

            <RadioButton
                android:id="@+id/radioRed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/red"
                android:checked="true"
                android:text="@string/radio_red" />

            <RadioButton
                android:id="@+id/radioYellow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/yellow"
                android:text="@string/radio_yellow" />

            <RadioButton
                android:id="@+id/radioBlue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/blue"
                android:text="@string/radio_blue" />
        </RadioGroup>

        <TextView
            android:id="@+id/name_seekbar1"
            android:layout_width="68dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/seekBar1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="12dp"
            android:gravity="start"
            android:text="@string/name_seekbar1" />

        <TextView
            android:id="@+id/name_seekbar2"
            android:layout_width="68dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/seekBar2"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="12dp"
            android:gravity="start"
            android:text="@string/name_seekbar2" />

        <SeekBar
            android:id="@+id/seekBar1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/seekBar2"
            android:layout_margin="8dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="35dp"
            android:layout_toLeftOf="@+id/tvXMax"
            android:layout_toRightOf="@+id/name_seekbar1"
            android:max="500"
            android:paddingBottom="12dp" />

        <SeekBar
            android:id="@+id/seekBar2"
            android:layout_width="248dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="97dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="6dp"
            android:layout_marginBottom="10dp"
            android:layout_toLeftOf="@+id/tvYMax"
            android:layout_toRightOf="@+id/name_seekbar2"
            android:max="150"
            android:paddingBottom="12dp" />

        <TextView
            android:id="@+id/tvXMax"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/seekBar1"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="15dp"
            android:gravity="right"
            android:text="@string/dash"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/tvYMax"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/seekBar2"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="15dp"
            android:gravity="right"
            android:text="@string/dash"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>